--- a/.github/workflows/SukiSU-Ultra.yml
+++ b/.github/workflows/SukiSU-Ultra.yml
@@ -76,7 +76,7 @@ jobs:
           echo "Using branch for AnyKernel3: $ANYKERNEL_BRANCH"
 
           # Clone repositories using the branch names
-          git clone https://github.com/WildPlusKernel/AnyKernel3.git -b "$ANYKERNEL_BRANCH"
+          git clone https://github.com/osm0sis/AnyKernel3.git -b "$ANYKERNEL_BRANCH"
 
       - name: 🔍 Locate ramdisk
         id: locate_ramdisk
